# HulunGuard

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_DEFINITION.md  README.md  RELEASING.md  SECURITY.md  hulun.py  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: adapter_gap.yml  bug_report.yml  config.yml  feature_request.yml  maturity_task.yml
.github/workflows/: ci.yml  release.yml  scorecard.yml  security.yml
candidate_skill/anti-slop-longrun/: SKILL.md
candidate_skill/anti-slop-longrun/agents/: openai.yaml
candidate_skill/anti-slop-longrun/references/: architecture.md  state_schema.md
candidate_skill/anti-slop-longrun/scripts/: longrun_guard.py
docs/: ADAPTER_CONFORMANCE.md  ADAPTER_MATRIX.md  AGENT_COMPATIBILITY.md  CALIBRATION.md  COLLECTOR.md  INTEGRATION_KITS.md  OBSERVABILITY.md  ONBOARDING.md  OPENCLAW.md  OPEN_SOURCE_GOVERNANCE.md  PRODUCT_MATURITY_STANDARD.md  REAL_WORLD_BENCHMARKS.md  RELEASE_POLICY.md  RETENTION.md  SCHEMAS.md  SDK_AND_MCP.md  SERVICE_EXPORTS.md  SUPPLY_CHAIN.md  THREAT_MODEL.md  USAGE.md  calibration_baseline.json  index.html  zh.html
integrations/openclaw/hulunguard/: HOOK.md  handler.js
research/: github_snapshot_2026-06-08.json  hulun_index_research_note.md  industrial_solution.md  maturity_audit_2026-06-19.md  product_identity_and_validation.md  source_matrix.md
scripts/: Install-OpenClawHook.ps1  generate_release_metadata.py  verify_github_release.py  verify_release_artifacts.py
src/hulun_guard/: __init__.py  adapter_matrix.py  adapters.py  benchmarks.py  calibration.py  cli.py  collector.py  compatibility.py  constants.py  conversation.py  integration_kits.py  mcp.py  monitor.py  onboarding.py  privacy.py  queue.py  release_metadata.py  release_verification.py  reports.py  retention.py  risk.py  schemas.py  sdk.py  security.py  service_exports.py  storage.py  trace_diagnostics.py  util.py  validation.py  widget.py
src/hulun_guard/schema_fixtures/: batch_ingest_v1.json  collector_v1.json  github_release_verification_v1.json  langfuse_service_export_v1.json  legacy_adapter_export_v0.json  legacy_benchmark_report_v0.json  legacy_calibration_report_v0.json  legacy_conversation_v0.json  legacy_risk_report_v0.json  legacy_state_v0.json  service_export_v1.json  trace_doctor_v1.json
src/hulun_guard/security_docs/: THREAT_MODEL.md
tests/: test_adapter_conformance.py  test_adapter_matrix.py  test_collector.py  test_hulun_guard.py  test_release_metadata.py  test_release_verifier.py  test_security_model.py  test_service_exports.py
tools/: hulun.ps1  longrun.ps1
