[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "hulun-guard"
version = "0.3.0"
description = "Proof-first reliability guard for long-running AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "HulunGuard" }]
dependencies = []

[project.scripts]
hulun = "hulun_guard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
